--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 .vs/
 
 .idea/*
+# Content Large Files
+Content/ParagonMurdock
+Content/Realistic_Starter_VFX_Pack_Vol2
+Content/ShooterGameAssets
+Content/SpaceshipInterior
 
 # Compiled Object files
 *.slo
