--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TestLevel.TestLevel
 EditorStartupMap=/Game/Maps/TestLevel.TestLevel
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/GM_Game.GM_Game_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
