--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TestLevel.TestLevel
 EditorStartupMap=/Game/Maps/TestLevel.TestLevel
-GlobalDefaultGameMode=/Game/Blueprints/GM_Game.GM_Game_C
+GlobalDefaultGameMode=/Script/AIShooter_Cpp.ShooterGameMode
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -153,4 +153,8 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/AIShooter_Cpp.MyGameModeBase",NewName="/Script/AIShooter_Cpp.ShooterGameMode")
 
