Random Time of Day

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Content/ParagonMurdock
 Content/Realistic_Starter_VFX_Pack_Vol2
 Content/ShooterGameAssets
 Content/SpaceshipInterior
+Content/StarterContent
 
 # Compiled Object files
 *.slo
