--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,4 +2,12 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1808D9A8464F744235C171A7D0243984
 CopyrightNotice=Copyright Hamed Salmanizadegan _ Email: hsalmanizadegan@gmail.com All Rights Reserved.
+ProjectName=Kill Or Die
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "C1B4A2EF4FF8CDCAFE05B0B3AEB4F8C4", "Kill Or Die")
+bAllowMinimize=False
+CompanyDistinguishedName=Shiny Comets
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+ForDistribution=True
 
